--- a/trunk/client/financials.html
+++ b/trunk/client/financials.html
@@ -120,7 +120,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="grossProfit">Gross Profit</div>
+                                                <div class="trigger" data-name="grossProfit" data-format="millions">Gross Profit</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -130,7 +130,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="netIncome">Net Income</div>
+                                                <div class="trigger" data-name="netIncome" data-format="millions">Net Income</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -140,7 +140,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="ebitda">EBITDA</div>
+                                                <div class="trigger" data-name="ebitda" data-format="millions">EBITDA</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -160,7 +160,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="payoutRatio">Payout-Ratio</div>
+                                                <div class="trigger" data-name="payoutRatio" data-format="percent">Payout-Ratio</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -190,7 +190,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalAssets">Total Assets</div>
+                                                <div class="trigger" data-name="totalAssets" data-format="millions">Total Assets</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -200,7 +200,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalCurrentAssets">Total Current Assets</div>
+                                                <div class="trigger" data-name="totalCurrentAssets" data-format="millions">Total Current Assets</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -210,7 +210,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="netPpe">Net PP&amp;E</div>
+                                                <div class="trigger" data-name="netPpe" data-format="millions">Net PP&amp;E</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -220,7 +220,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalCurrentLiabily">Total Current Liabilities</div>
+                                                <div class="trigger" data-name="totalCurrentLiabily" data-format="millions">Total Current Liabilities</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -230,7 +230,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="longTermDebt">Long-Term Debt</div>
+                                                <div class="trigger" data-name="longTermDebt" data-format="millions">Long-Term Debt</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -240,7 +240,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalLiability">Total Liabilities</div>
+                                                <div class="trigger" data-name="totalLiability" data-format="millions">Total Liabilities</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -250,7 +250,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="retainedEarnings">Retained Earnings</div>
+                                                <div class="trigger" data-name="retainedEarnings" data-format="millions">Retained Earnings</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -261,7 +261,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="commonStock">Common Stock</div>
+                                                <div class="trigger" data-name="commonStock" data-format="millions">Common Stock</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -271,7 +271,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="minorityInterest">Total Equity Minority Interest</div>
+                                                <div class="trigger" data-name="minorityInterest" data-format="millions">Total Equity Minority Interest</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -291,7 +291,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="cashOperations">Operations</div>
+                                                <div class="trigger" data-name="cashOperations" data-format="millions">Operations</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -301,7 +301,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="cashInvesting">Investing</div>
+                                                <div class="trigger" data-name="cashInvesting" data-format="millions">Investing</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -311,7 +311,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="cashFinancing">Financing</div>
+                                                <div class="trigger" data-name="cashFinancing" data-format="millions">Financing</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -321,7 +321,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="netChange">Net Change in Cash</div>
+                                                <div class="trigger" data-name="netChange" data-format="millions">Net Change in Cash</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -341,7 +341,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="returnAssets">ROA</div>
+                                                <div class="trigger" data-name="returnAssets" data-format="percent">ROA</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -351,7 +351,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="returnCapital">ROC</div>
+                                                <div class="trigger" data-name="returnCapital" data-format="percent">ROC</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -361,7 +361,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="returnEquity">ROE</div>
+                                                <div class="trigger" data-name="returnEquity" data-format="percent">ROE</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -371,7 +371,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="grossMargin">Gross Margin</div>
+                                                <div class="trigger" data-name="grossMargin" data-format="percent">Gross Margin</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -381,7 +381,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="ebitdaMargin">EBITDA Margin</div>
+                                                <div class="trigger" data-name="ebitdaMargin" data-format="percent">EBITDA Margin</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -391,7 +391,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="netIncomeMargin">Net Income Margin</div>
+                                                <div class="trigger" data-name="netIncomeMargin" data-format="percent">Net Income Margin</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -461,7 +461,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalDebtEquity">Total Debt/Equity</div>
+                                                <div class="trigger" data-name="totalDebtEquity" data-format="percent">Total Debt/Equity</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -491,7 +491,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalRevenue1YrAnnGrowth">Total Revenue</div>
+                                                <div class="trigger" data-name="totalRevenue1YrAnnGrowth" data-format="percent">Total Revenue</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -501,7 +501,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="ebitda1YrAnnGrowth">EBITDA</div>
+                                                <div class="trigger" data-name="ebitda1YrAnnGrowth" data-format="percent">EBITDA</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -511,7 +511,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="netIncome1YrAnnGrowth">Net Income</div>
+                                                <div class="trigger" data-name="netIncome1YrAnnGrowth" data-format="percent">Net Income</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -521,7 +521,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="eps1YrAnnGrowth">Normalized Diluted EPS</div>
+                                                <div class="trigger" data-name="eps1YrAnnGrowth" data-format="percent">Normalized Diluted EPS</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -531,7 +531,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="commonEquity1YrAnnGrowth">Common Equity</div>
+                                                <div class="trigger" data-name="commonEquity1YrAnnGrowth" data-format="percent">Common Equity</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
