--- a/trunk/client/company-tearsheet.html
+++ b/trunk/client/company-tearsheet.html
@@ -37,7 +37,7 @@
     <div class="container_3">
         <div class="row">
             <div class="grid_3">
-                <div class="page-title property" data-name="companyName"></div>
+                <div class="page-title" data-name="companyName"><span class="property" data-name="companyName"></span> (<span class="property" data-name="tickerCode"></span>)</div>
                 <div class="stock-price">
                     <div class="main">
                     	S$ <span class="lastPrice">--</span>
@@ -235,7 +235,7 @@
 	                    <div class="col-1">
 	                        <h5>Contact</h5>
 	                        <div class="property" data-name="companyAddress">-</div>
-	                        <a href="#" target="_blank" alt="" class="link property" data-name="companyWebsite"><span class="property" data-name="companyName"></span></a>
+	                        <a href="#" target="_blank" alt="" class="link property" data-name="companyWebsite">Company Website</a>
 	                    </div>
 	                    <div class="col-2">
 	                        <h5># of Employees</h5>
@@ -281,10 +281,10 @@
 	                    <p class="centered">
 	                        Consensus Target Price
 	                    </p>
-	                    <div class="price">$22.10</div>
+	                    <div class="price">--</div>
                     </div>
                     <div class="no-estimate">
-                    	No estimate provided - NEED COPY
+                    	No Recommendation
                     </div>
                 </div>
                 <div class="module dark-module alpha-factors">
