--- a/trunk/client/alpha-factor.html
+++ b/trunk/client/alpha-factor.html
@@ -2,29 +2,21 @@
 <html>
 
 <head>
-    <title>Alpha Factor - SGX</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>SGX - Alpha Factors</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="shortcut icon" href="img/sgxPortal.ico">
-    <script src="javascripts/vendor/requirejs/require.js" data-main="javascripts/main.js"></script>
+    <script type="text/javascript" src="javascripts/app/XD.js"></script>
+    <script type="text/javascript" src="javascripts/vendor/requirejs/require.js" data-main="javascripts/main.js"></script>
 </head>
 
 <body>
-    <div id="modal">
-        <div class="modal-container">
-            <div class="modal-content">
-                <div class="close-button"></div>
-                <h4>Search Criteria</h4>
-                <p>You have reached the criteria limit. Please remove criteria before proceeding.</p>
-            </div>
-        </div>
-        <div class="bg"></div>
-    </div>
+
     <div class="container_3">
         <div class="grid_3">
             <div class="page-title">S&amp;P Capital IQ Alpha Factor Composites Library</div>
         </div>
     </div>
+    
     <div class="container_3">
         <div class="row">
             <div class="grid_1 composite-leadin">
