--- a/client/financials.html
+++ b/client/financials.html
@@ -110,7 +110,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalRevenue" data-format="millions">Total Revenue</div>
+                                                <div class="trigger" data-name="totalRevenue" data-format="cash">Total Revenue</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -120,7 +120,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="grossProfit" data-format="millions">Gross Profit</div>
+                                                <div class="trigger" data-name="grossProfit" data-format="cash">Gross Profit</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -130,7 +130,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="netIncome" data-format="millions">Net Income</div>
+                                                <div class="trigger" data-name="netIncome" data-format="cash">Net Income</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -140,7 +140,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="ebitda" data-format="millions">EBITDA</div>
+                                                <div class="trigger" data-name="ebitda" data-format="cash">EBITDA</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -190,7 +190,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalAssets" data-format="millions">Total Assets</div>
+                                                <div class="trigger" data-name="totalAssets" data-format="cash">Total Assets</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -200,7 +200,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalCurrentAssets" data-format="millions">Total Current Assets</div>
+                                                <div class="trigger" data-name="totalCurrentAssets" data-format="cash">Total Current Assets</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -210,7 +210,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="netPpe" data-format="millions">Net PP&amp;E</div>
+                                                <div class="trigger" data-name="netPpe" data-format="cash">Net PP&amp;E</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -220,7 +220,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalCurrentLiabily" data-format="millions">Total Current Liabilities</div>
+                                                <div class="trigger" data-name="totalCurrentLiabily" data-format="cash">Total Current Liabilities</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -230,7 +230,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="longTermDebt" data-format="millions">Long-Term Debt</div>
+                                                <div class="trigger" data-name="longTermDebt" data-format="cash">Long-Term Debt</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -240,7 +240,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalLiability" data-format="millions">Total Liabilities</div>
+                                                <div class="trigger" data-name="totalLiability" data-format="cash">Total Liabilities</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -250,7 +250,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="retainedEarnings" data-format="millions">Retained Earnings</div>
+                                                <div class="trigger" data-name="retainedEarnings" data-format="cash">Retained Earnings</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -261,7 +261,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="commonStock" data-format="millions">Common Stock</div>
+                                                <div class="trigger" data-name="commonStock" data-format="cash">Common Stock</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -271,7 +271,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="minorityInterest" data-format="millions">Total Equity Minority Interest</div>
+                                                <div class="trigger" data-name="minorityInterest" data-format="cash">Total Equity Minority Interest</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -291,7 +291,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="cashOperations" data-format="millions">Operations</div>
+                                                <div class="trigger" data-name="cashOperations" data-format="cash">Operations</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -301,7 +301,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="cashInvesting" data-format="millions">Investing</div>
+                                                <div class="trigger" data-name="cashInvesting" data-format="cash">Investing</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -311,7 +311,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="cashFinancing" data-format="millions">Financing</div>
+                                                <div class="trigger" data-name="cashFinancing" data-format="cash">Financing</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -321,7 +321,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="netChange" data-format="millions">Net Change in Cash</div>
+                                                <div class="trigger" data-name="netChange" data-format="cash">Net Change in Cash</div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
