--- a/trunk/client/company-tearsheet.html
+++ b/trunk/client/company-tearsheet.html
@@ -100,7 +100,7 @@
                                     </tr>
                                     <tr class="even">
                                         <td>Volume</td>
-                                        <td class="property" data-name="volume" data-unit="mil">-</td>
+                                        <td class="property" data-name="volume">-</td>
                                         <td>Previous Close</td>
                                         <td class="property" data-name="previousClosePrice">-</td>
                                     </tr>
@@ -220,7 +220,7 @@
                     <div class="button view-financials">View recent financial statement data</div>
                 </div>
 
-                <div class="module">
+                <div class="module businessDescription">
                     <div class="title">
                         <div class="label">Company Description</div>
                     </div>
