--- a/trunk/client/index.html
+++ b/trunk/client/index.html
@@ -228,7 +228,7 @@
                                 <div class="trigger">P/BV</div>
                                 <input type="checkbox">
                             </div>
-                            <div class="checkbox" data-type="lookup" data-name="avgBrokerReq" data-display="true" data-short-name="Consensus">
+                            <div class="checkbox" data-type="lookup" data-name="avgBrokerReq" data-display="true" data-short-name="Consensus" data-min="Sell" data-max="Buy" data-formatter='{ "type": "round-list", "values": [ "", "Sell", "Underperform", "Hold", "Overperform", "Buy" ] }'>
                                 <div class="trigger">Consensus Recommendation</div>
                                 <input type="checkbox">
                             </div>
