--- a/trunk/client/company-tearsheet.html
+++ b/trunk/client/company-tearsheet.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Screener - SGX</title>
+    <title>SGX - Company Profile</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="shortcut icon" href="img/sgxPortal.ico">
     <script type="text/javascript" src="javascripts/app/XD.js"></script>
