getting secondary industry search working

--- a/client/index.html
+++ b/client/index.html
@@ -264,8 +264,16 @@
                 <div class="toolbar">
                     <span class="column results">0 results</span>
                     
-                    <span class="column center">
-						&nbsp;                    
+                    <span class="column center additional-criteria" data-name="industry">
+						<div class="button-dropdown" data-label="Select Sector & Industry">
+							<div class="trigger">
+								<span class="copy">Select Sector & Industry</span>
+								<span class="arrow"></span>
+							</div>
+							<div class="dropdown">
+								<ul></ul>
+							</div>
+						</div>                   
                     </span>
 
                     <span class="column right">
