--- a/client/financials.html
+++ b/client/financials.html
@@ -550,7 +550,14 @@
                     <p class="source">Source: S&amp;P Capital IQ</p>
                 </div>
             </div>
+            
         </div>
+
+   		<div class="row">
+   			<div class="grid_3 center">
+				<a href="terms-conditions.html" class="terms-conditions">Use of this information is subject to terms and conditions</a>
+   			</div>
+    	</div>        
     </div>
 
 </body>
