--- a/client/related.html
+++ b/client/related.html
@@ -113,6 +113,14 @@
 	
     </div>
 
+    <div class="container_3">
+        <div class="row">
+			<div class="grid_3 center">
+				<a href="terms-conditions.html" class="terms-conditions">Use of this information is subject to terms and conditions</a>
+			</div>
+		</div>
+	</div>
+
 </body>
 
 </html>
