--- a/client/terms-conditions.html
+++ b/client/terms-conditions.html
@@ -1,4 +1,6 @@
-	<h5>Your use of SGX All In One is subject to the below terms and conditions:</h5>
+<div class="terms-copy">
+
+	<h4>Your use of SGX All In One is subject to the below terms and conditions:</h4>
 	
 	<ul>
 	    <li>Neither Singapore Exchange Securities Trading Limited ("SGX"), nor any third-party licensor (including but not limited to Capital IQ, Inc. ("Capital IQ") its affiliates) shall have any liability for the accuracy or completeness of the information or software furnished through SGX All In One, all of which are provided on an "as is" basis, or for delays, interruptions or omissions therein nor for any lost profits, indirect, special or consequential damages.</li>
@@ -17,3 +19,6 @@
 	    <li>You acknowledge S&amp;P, Capital IQ, Inc., their affiliates and MSCI as third party beneficiaries of the these terms and conditions and that each of them is entitled to enforce all provisions hereof.</li>
 	    <li>You agree to indemnify and hold harmless SGX, its information providers, and any other third party involved in or related to the making or compiling of SGX All In One and/or the data and information contained therein, from and against any claims, losses, damages, liabilities, costs and expenses, including reasonable attorneys’ fees and costs, as incurred, arising in any manner out of your use of, or inability to use, the SGX All In One and/or the data and information contained therein or any breach by you of the use restrictions regarding the SGX All In One and/or the data and information contained therein.</li>
 	</ul>
+	
+</div>
+
