--- a/client/related.html
+++ b/client/related.html
@@ -4,7 +4,8 @@
 <head>
     <title>SGX - Related</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
-    <link rel="shortcut icon" href="img/sgxPortal.ico">
+	<link rel="stylesheet" href="stylesheets/vendor/colorbox/colorbox.css" />
+	<link rel="shortcut icon" href="img/sgxPortal.ico">
     <script type="text/javascript" src="javascripts/app/XD.js"></script>
     <script type="text/javascript" src="javascripts/vendor/requirejs/require.js" data-main="javascripts/main.js"></script>
 </head>
