lots of cleanup and IE8 optimization as well a todo list from Alicia

--- a/client/financials.html
+++ b/client/financials.html
@@ -40,9 +40,6 @@
                 <div class="breadcrumb">
                     <div class="button back-button"><a href="index.html" class="screener-link">Back to Stock Screener</a>
                     </div>
-                    <ul class="breadcrumb-tree">
-                        <li>Industry Tree:</li>
-                    </ul>
                     <div class="right-nav">
                         <div class="print-button">Print</div>
                         <div class="button comparable-button">Find comparable companies</div>
@@ -53,8 +50,13 @@
         </div>
 
         <div class="row">
-            <div class="grid_3 right back">
-                <a class="back-company-profile" href="#">&laquo; Back to Company Profile</a>
+            <div class="grid_3">
+            	<span class="column">
+	            	<p class="breadcrumb-tree">
+	            		<span>Industry Tree:</span> <span class="dynamic"></span>
+	            	</p>
+            	</span>
+               	<a class="back-company-profile" href="#">&laquo; Back to Company Profile</a>
             </div>
         </div>
 
