--- a/client/index.html
+++ b/client/index.html
@@ -140,27 +140,27 @@
                         <div class="panel">
                             <div class="checkbox checked default" data-type="millions" data-name="marketCap" data-display="true" data-short-name="Mtk. Cap.">
                                 <div class="trigger">Total Market Cap</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="percent" data-name="percentChange"  data-display="true" data-short-name="% Change" data-search-required="true">
                                 <div class="trigger">% Change over date range up to 1 year</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="percent" data-name="priceVs52WeekHigh"  data-display="true" data-short-name="Price vs. High">
                                 <div class="trigger">Current Stock Price vs 52 week high</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="percent" data-name="priceVs52WeekLow"  data-display="true" data-short-name="Price vs. Low">
                                 <div class="trigger">Current Stock Price vs 52 week low</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="number" data-name="beta5Yr"  data-display="true" data-short-name="Beta">
                                 <div class="trigger">5-Year Beta</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="millions" data-name="volume"  data-display="true" data-short-name="Volume">
                                 <div class="trigger">Volume</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                         </div>
 
@@ -168,35 +168,35 @@
                         <div class="panel">
                             <div class="checkbox checked default" data-type="millions" data-name="totalRevenue"  data-display="true" data-short-name="Tot. Rev.">
                                 <div class="trigger">Total Revenue</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="percent" data-name="ebitdaMargin"  data-display="true" data-short-name="EBITDA Mrg.">
                                 <div class="trigger">EBITDA Margin</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="percent" data-name="netProfitMargin"  data-display="true" data-short-name="Prof. Mrg.">
                                 <div class="trigger">Net Profit Margin</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="percent" data-name="eps"  data-display="true" data-short-name="EPS">
                                 <div class="trigger">Earnings Per Share</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="percent" data-name="totalDebtEquity"  data-display="true" data-short-name="D/E">
                                 <div class="trigger">Debt/Equity Ratio</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="percent" data-name="totalRev1YrAnnGrowth"  data-display="true"  data-short-name="Growth 1y">
                                 <div class="trigger">1-year Revenue Growth</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="percent" data-name="totalRev3YrAnnGrowth"  data-display="true"  data-short-name="Growth 3y">
                                 <div class="trigger">3-year Revenue Growth</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="percent" data-name="totalRev5YrAnnGrowth"  data-display="true"  data-short-name="Growth 5y">
                                 <div class="trigger">5-year Revenue Growth</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                         </div>
 
@@ -204,19 +204,19 @@
                         <div class="panel">
                             <div class="checkbox checked default" data-type="number" data-name="peRatio"  data-display="true" data-short-name="P/E">
                                 <div class="trigger">P/E Ratio</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox checked default" data-type="percent" data-name="dividendYield"  data-display="true" data-short-name="Div. Yld.">
                                 <div class="trigger">Dividend Yield</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="number" data-name="priceToBookRatio"  data-display="true" data-short-name="P/BV">
                                 <div class="trigger">P/BV</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                             <div class="checkbox" data-type="lookup" data-name="avgBrokerReq" data-display="true" data-short-name="Consensus" data-min="Sell" data-max="Buy" data-formatter='{ "type": "round-list", "values": [ "", "Sell", "Underperform", "Hold", "Overperform", "Buy" ] }'>
                                 <div class="trigger">Consensus Recommendation</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                         </div>
                         
@@ -224,7 +224,7 @@
                         <div class="panel">
                             <div class="checkbox checked default" data-name="industryGroup" data-template="select" data-label="Select Industry"  data-display="false" data-sort="string" data-short-name="Industry">
                                 <div class="trigger">Industry</div>
-                                <input type="checkbox">
+                                <input type="checkbox" />
                             </div>
                         </div>
                     </div>
@@ -251,9 +251,9 @@
                     <span class="column results">0 results</span>
                     
                     <span class="column center additional-criteria" data-name="industry">
-						<div class="button-dropdown" data-label="Select Sector & Industry">
+						<div class="button-dropdown" data-label="Select Sector">
 							<div class="trigger">
-								<span class="copy">Select Sector & Industry</span>
+								<span class="copy">Select Sector</span>
 								<span class="arrow"></span>
 							</div>
 							<div class="dropdown">
