--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,9 @@
     <title>Screener - SGX</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
 	<link rel="stylesheet" href="stylesheets/vendor/colorbox/colorbox.css" />
+	<!--[if lt IE 9]>
+    	<link rel="stylesheet" href="stylesheets/ie8.css" />
+	<![endif]-->
     <link rel="shortcut icon" href="img/sgxPortal.ico">
     <script type="text/javascript" src="javascripts/app/XD.js"></script>
     <script type="text/javascript" src="javascripts/vendor/requirejs/require.js" data-main="javascripts/main.js"></script>
@@ -31,7 +34,7 @@
 
         <div class="row">
             <div class="grid_3">
-                <div class="page-title">Find A Company</div>
+                <div class="page-title">Find a Company</div>
             </div>
         </div>
     
