--- a/trunk/client/index.html
+++ b/trunk/client/index.html
@@ -55,6 +55,7 @@
     
     <div class="container_3">
         <div class="row advanced-criteria">
+    		<p>&nbsp;</p>
             <div class="grid_2">
                 <div class="module edit">
                     <div class="title">
